Connector Documentation Deploy

--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body {
 	float: left;
 	width: 40%;
 	height: 100%;
-	background:url(mule.png) no-repeat center center
+	background:url(index.png) no-repeat center center
 }
 
 #right{
